<resources>
    <string name="app_name" translatable="false">HomeSky</string>
    <string name="action_search">Search</string>

    <!-- MenuFragmentsActivity -->
    <string-array name="modules_titles">
        <item>State</item>
        <item>Rules</item>
        <item>User</item>
        <item>Controller</item>
        <item>Notification</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string name="menu_drawer_settings">Settings</string>

    <!-- Login fragment -->
    <string name="login_fragment_title" translatable="false">Login</string>
    <string name="login_activity_passwd_hint">Password</string>
    <string name="login_activity_signin_button">Sign in</string>
    <string name="login_fragment_empty_login">Please, type your Login</string>
    <string name="login_fragment_empty_passwd">Please, type your Password</string>
    <string name="login_fragment_server_offline">This is embarrassing…Server is offline =(</string>
    <string name="login_fragment_connection_failed">Connection failed =(</string>
    <string name="login_fragment_error">Login error: </string>
    <string name="login_fragment_server_already_logged">Already logged</string>
    <string name="login_fragment_remember_me">Remember me</string>
    <string name="login_fragment_remember_me_key" translatable="false">com.homesky.homesky.login.remembermekey</string>
    <string name="login_fragment_remember_me_user" translatable="false">com.homesky.homesky.login.remembermekey</string>
    <string name="login_fragment_remember_me_passwd" translatable="false">com.homesky.homesky.login.remembermekey</string>
    <string name="login_fragment_select_server">Select server: </string>
    <string name="login_fragment_server_hint">Type server address</string>
    <string-array name="server_options">
        <item>AWS Fabio</item>
        <item>AWS Ricardo</item>
        <item>Custom</item>
    </string-array>
    <string name="login_fragment_address_format_error">Invalid address format (perhaps forgot leading \"http\"?)</string>

    <!-- State fragment -->
    <string name="state_fragment_title">State</string>
    <string name="state_fragment_item_row">Node %1$d from Controller %2$d</string>
    <string name="state_fragment_error">Error. Try again.</string>
    <string name="state_fragment_empty_list">No sensors nor actuators.\nTurn on some nodes =]</string>

    <!-- Node Infos Dialog Fragment -->
    <string name="node_infos_dialog_fragment_controller_id">Controller ID </string>
    <string name="node_infos_dialog_fragment_node_id">Node ID </string>
    <string name="node_infos_dialog_fragment_node_room">Room</string>
    <string name="node_infos_dialog_fragment_node_alive">Alive</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Rule fragment -->
    <string name="rule_fragment_title">Rules</string>
    <string name="rule_item_node_id">Node id:</string>
    <string name="rule_item_node_name">Name:</string>
    <string name="rule_item_node_room">Room:</string>
    <string name="rule_fragment_no_connection">No internet connection</string>
    <string name="rule_fragment_refresh_message">No internet connection. Please, restore the connection and refresh this page.</string>
    <string name="rule_fragment_empty_message">No actuators to show =(\n Can\'t create rules without one</string>
    <string name="rule_fragment_learn_request_sent">Rule learning request sent!</string>

    <!-- Rule list fragment -->
    <string name="rule_list_or">or</string>
    <string name="rule_list_and">and</string>
    <string name="rule_list_set">set</string>
    <string name="rule_list_condition">condition:</string>
    <string name="rule_list_effect">effect:</string>
    <string name="rule_list_sending_progress_title">Please wait</string>
    <string name="rule_list_sending_progress_message">Sending rule to server…</string>
    <string name="rule_list_retry_message">Could not send rule</string>
    <string name="rule_list_retry_button_text">Retry</string>
    <string name="rule_list_fab_when_retry_message">There is already a new pending rule</string>
    <string name="rule_list_fab_when_no_internet_message">Can\'t load new rule page with no connection</string>
    <string name="rule_list_connection_error">Could not connect to server</string>
    <string name="rule_list_delete_rule_dialog_title">Delete Rule</string>
    <string name="rule_list_delete_rule_dialog_message">Do you wish to delete the selected rule?</string>
    <string name="rule_list_deleting_progress_message">Deleting rule…</string>
    <string name="rule_list_empty_message">No rules to show =(\n Click on the button below to add a new one</string>


    <!-- Clause fragment -->
    <string name="clause_action_command">Action command</string>
    <string name="clause_action_value">Action value</string>
    <string name="clause_menu_save">Save</string>
    <string name="clause_menu_cancel">Cancel</string>
    <string name="clause_save_error_message">Please fill in all fields correctly</string>

    <!-- And statement fragment -->
    <string name="and_statement_empty_message">Add a new OR statement</string>

    <!-- Proposition dialog fragment -->
    <string name="proposition_dialog_lhs">LHS</string>
    <string name="proposition_dialog_node">Node:</string>
    <string name="proposition_dialog_command">Command:</string>
    <string name="proposition_dialog_operator">Operator</string>
    <string name="proposition_dialog_rhs">RHS</string>
    <string name="proposition_dialog_rhs_type">Type:</string>
    <string name="proposition_dialog_type_value">Value</string>
    <string name="proposition_dialog_type_node">Node</string>
    <string name="proposition_dialog_value">Value:</string>
    <string name="proposition_dialog_ok">OK</string>
    <string name="proposition_dialog_cancel">Cancel</string>
    <string name="proposition_dialog_value_error_msg">Invalid value</string>

    <!-- Controller fragment -->
    <string name="controller_fragment_title">Associated Controllers</string>
    <string name="controller_register_error">Error registering controller:</string>
    <string name="controller_sending_progress_title">Please wait</string>
    <string name="controller_sending_progress_message">Registering controller…</string>
    <string name="controller_refreshing_progress_message">Refreshing controllers…</string>
    <string name="controller_connection_error">Could not connect to server</string>
    <string name="controller_retry_message">Could not register controller</string>
    <string name="controller_fab_when_retry_message">There is already a pending controller registration request</string>
    <string name="controller_fab_when_no_internet_message">Can\'t register new controller without internet connection</string>
    <string name="controller_empty_message">No controllers to show\nClick on the button below to scan a code</string>

    <!-- Notification fragment -->
    <string name="notification_fragment_title">Notification</string>
    <string name="notification_fragment_list_accept">Accept</string>
    <string name="notification_fragment_list_deny">Deny</string>

    <!-- User fragment -->
    <string name="user_fragment_title">Registered Users</string>
    <string name="user_retry_message">Could not register new user</string>
    <string name="user_sending_progress_title">Please wait</string>
    <string name="user_sending_progress_message">Registering user…</string>
    <string name="user_connection_error">Could not connect to server</string>
    <string name="user_fab_when_retry_message">There is already a pending user registration request</string>
    <string name="user_fab_when_no_internet_message">Can\'t register new user without internet connection</string>
    <string name="user_empty_message">No users registered\nClick on the button below to add a new one</string>

    <!-- New User Dialog fragment -->
    <string name="new_user_fragment_username">Username:</string>
    <string name="new_user_fragment_password">Password:</string>
    <string name="new_user_fragment_password_confirm">Confirm Password:</string>
    <string name="new_user_fragment_empty_field_message">Please, fill in all fields</string>
    <string name="new_user_fragment_password_mismatch_message">Passwords don\'t match</string>
    <string name="new_user_fragment_send_error_message">Error registering user:</string>
    <string name="new_user_fragment_dialog_title">Insert new user data</string>

    <!-- Settings fragment -->
    <string name="settings_fragment_title">Settings</string>
    <string name="settings_fragment_logout">Logout</string>

    <!-- Node fragment -->
    <string name="node_fragment_title">Node information and values</string>
    <string name="node_fragment_node_title">Node ID</string>
    <string name="node_fragment_node_value">Value</string>
    <string name="node_fragment_list_div_sensor">Sensors</string>
    <string name="node_fragment_list_div_actuator">Actuators</string>
    <string name="node_fragment_list_div_nothing">No sensor nor actuator</string>
    <string name="node_dialog_fragment_title">Send Action</string>
    <string name="node_dialog_fragment_name">New value</string>
    <string name="node_fragment_no_connection">No internet connection</string>
    <string name="node_fragment_not_logged">You are not logged</string>

    <!-- Send Action Dialog Fragment -->
    <string name="send_action_dialog_null_value">Please, type a value to send</string>
    <string name="send_action_dialog_out_of_bounds_value">The value must be between %1$s and %2$s</string>

    <!-- Enum utils -->
    <string name="EQ">is equal to</string>
    <string name="NE">is not equal to</string>
    <string name="LT">is less than</string>
    <string name="LE">is less than or equal to</string>
    <string name="GT">is greater than</string>
    <string name="GE">is greater than or equal to</string>

    <string-array name="operators">
        <item>@string/EQ</item>
        <item>@string/NE</item>
        <item>@string/LT</item>
        <item>@string/LE</item>
        <item>@string/GT</item>
        <item>@string/GE</item>
    </string-array>

    <string name="HUMIDITY">humidity</string>
    <string name="LUMINANCE">luminance</string>
    <string name="PRESSURE">pressure</string>
    <string name="PRESENCE">presence</string>
    <string name="SMOKE">smoke</string>
    <string name="WIND_SPEED">wind speed</string>

    <string name="AC_MODE">ac mode</string>
    <string name="FAN">fan speed</string>
    <string name="LIGHT_COLOR">light color</string>
    <string name="LIGHT_INTENSITY">light intensity</string>
    <string name="LIGHT_SWITCH">light switch</string>
    <string name="TEMPERATURE">temperature</string>
    <string name="TOGGLE">toggle</string>
    <string name="CHANNEL">channel</string>

    <!-- Notification fragment -->
    <string name="notification_fragment_rule_result">Result</string>
    <string name="notification_fragment_rule_clause">When</string>
    <string name="notification_fragment_accept">Accept</string>
    <string name="notification_fragment_deny">Deny</string>

</resources>
