<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:rowCount="4"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GridItemStyle"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/new_user_fragment_username"/>
    <EditText
        android:id="@+id/fragment_new_user_dialog_username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        style="@style/GridItemStyle"
        android:maxLines="1"
        android:layout_row="0"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GridItemStyle"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/new_user_fragment_password"/>
    <EditText
        android:id="@+id/fragment_new_user_dialog_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        style="@style/GridItemStyle"
        android:inputType="textPassword"
        android:layout_row="1"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GridItemStyle"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/new_user_fragment_password_confirm"/>
    <EditText
        android:id="@+id/fragment_new_user_dialog_password_confirm_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        style="@style/GridItemStyle"
        android:inputType="textPassword"
        android:layout_row="2"
        android:layout_column="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <Button
            android:id="@+id/fragment_new_user_dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proposition_dialog_ok"
            android:layout_margin="4dp"
            android:background="@drawable/round_dialog"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/fragment_new_user_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proposition_dialog_cancel"
            android:layout_margin="4dp"
            android:background="@drawable/round_dialog"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</GridLayout>