<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
    
    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_item_node_id"/>

    <TextView
        android:layout_row="0"
        android:layout_column="1"
        android:id="@+id/rule_node_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="ID"
        android:layout_marginLeft="8dp"/>


    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_item_node_name"/>

    <TextView
        android:layout_row="1"
        android:layout_column="1"
        android:id="@+id/rule_node_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="NAME"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_item_node_room"/>

    <TextView
        android:layout_row="2"
        android:layout_column="1"
        android:id="@+id/rule_node_room_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="ROOM"
        android:layout_marginLeft="8dp"/>

</GridLayout>