<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:minWidth="300dp"
      android:minHeight="400dp"
      android:layout_margin="@dimen/activity_horizontal_margin"
      android:background="@drawable/round_dialog">

    <TextView
        android:id="@+id/node_infos_dialog_fragment_name"
        android:gravity="center"
        android:textSize="@dimen/subtitle_1_title_text_size"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        tools:text="TITLE"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/activity_horizontal_margin">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/node_infos_dialog_fragment_controller_id"/>
                <TextView
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:id="@+id/node_infos_dialog_fragment_controller_id"/>
                <TextView/>

            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/node_infos_dialog_fragment_node_id"/>
                <TextView
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:id="@+id/node_infos_dialog_fragment_node_id"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/node_infos_dialog_fragment_node_alive"/>
                <TextView
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:id="@+id/node_infos_dialog_fragment_node_alive"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/node_infos_dialog_fragment_node_room"/>
                <TextView
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:id="@+id/node_infos_dialog_fragment_node_room"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>