<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:layout_marginBottom="@dimen/activity_vertical_margin"
              android:layout_marginStart="@dimen/activity_horizontal_margin"
              android:layout_marginEnd="@dimen/activity_horizontal_margin">
    <TextView
        android:id="@+id/login_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_fragment_title"
        android:textSize="@dimen/title_text_size"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/login_fragment_edit_login"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/login_fragment_title"/>

    <EditText
        android:id="@+id/login_fragment_edit_passwd"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:hint="@string/login_activity_passwd_hint"/>

    <Button
        android:id="@+id/login_fragment_login_button"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/round_dialog"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login_fragment_title"/>

    <Button
        android:id="@+id/login_fragment_signin_button"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/round_dialog"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login_activity_signin_button"/>

    <LinearLayout
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone">
        <CheckBox
            android:id="@+id/login_fragment_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/login_fragment_remember_me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
